group-projects/solutions/a01-web-ingress/service-user.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-user
spec:
  type: ClusterIP
  selector:
    app: user
  ports:
    - port: 80
      targetPort: 80
