group-projects/solutions/a01-web-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-web
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
