group-projects/solutions/a01-web-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /g1/user(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: svc-user
                port:
                  number: 80
          - path: /g1(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: svc-web
                port:
                  number: 80
